BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Master_File_Participant_BMS_EMEA__c.object
<CustomObject>
    <description>VPRO Oct 2013: Object part of the Field Force Meeting module for BMS EMEA. Child object of Master File to store Planned Participants (high-level information tracked per Participant type).</description>
    <fields>
        <fullName>External_ID_BMS_SHARED__c</fullName>
        <description>VPRO Feb 2014: external ID used for data loading</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fields_Delivered_BMS_EMEA__c</fullName>
        <label>Fields Delivered</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fields_Planned_BMS_EMEA__c</fullName>
        <label>Fields Planned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MF_Planned_BMS_EMEA__c</fullName>
        <label>MF Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_File_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: parent Master File of the record.</description>
        <label>Master File</label>
        <referenceTo>Master_File_BMS_EMEA__c</referenceTo>
        <relationshipLabel>Master File Participants</relationshipLabel>
        <relationshipName>Master_File_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_all_Meetings_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: number of participants per Event multiplied by Target number of Meetings.</description>
        <formula>Number_per_Meeting_BMS_EMEA__c * Master_File_BMS_EMEA__r.Targeted_number_of_Meetings_BMS_EMEA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number for all Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_per_Meeting_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: Number of Planned Participants per Meeting</description>
        <label>Number per Meeting</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TherArea_Expertise_Specialty_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: additional information to qualify the Planned Participants.</description>
        <label>Therapeutic Area/Expertise/Specialty</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Master File Participant</label>
    <nameField>
        <displayFormat>MFP-{00000}</displayFormat>
        <label>Master File Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master File Participants</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Audience</fullName>
        <active>true</active>
        <description>Non sponsored or contracted individuals attending event</description>
        <label>BMS - EMEA - Audience</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_BMS_Employee</fullName>
        <active>true</active>
        <description>BMS Employee planned participants</description>
        <label>BMS - EMEA - BMS Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_JV_Partner_Employee</fullName>
        <active>false</active>
        <description>JV Employee Planned Participants</description>
        <label>BMS - EMEA - JV Partner Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Speaker</fullName>
        <active>true</active>
        <description>Speaker planned participants</description>
        <label>BMS - EMEA - Speaker</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Sponsored</fullName>
        <active>true</active>
        <description>Details of individuals with whom BMS will sponsor to a third party event</description>
        <label>BMS - EMEA - Sponsored</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>